--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <canvas id="canvas" height="600" width="800"></canvas>
+    <div id="healthBar">
+        <img src="health.png" alt="heart">
+        <img src="health.png" alt="heart">
+        <img src="health.png" alt="heart">
+    </div>
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
