--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
     <canvas id="canvas" height="700" width="900"></canvas>
-    <div id="healthBar">
-        <img src="health.png" alt="heart">
-        <img src="health.png" alt="heart">
-        <img src="health.png" alt="heart">
+    <div>
+        <div id="healthBar">
+            <img src="images/health.png" alt="heart">
+            <img src="images/health.png" alt="heart">
+            <img src="images/health.png" alt="heart">
+        </div>
+        <span id="score"></span>
     </div>
+    </body>
+    <script type="text/javascript" src="quotes.js"></script>
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
